# codex-agent-workflow-kit

./: .gitignore  00_실행_더블클릭.bat  AGENTS.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  PROJECT_BLUEPRINT.md  README.md  ROADMAP.md  SECURITY.md  WORKFLOW.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  workflow-pattern.md
.github/workflows/: ci.yml  workflow-kit-smoke.yml
codex_multi_agent_workflow_kit/: __init__.py  cli.py  contracts.py  envelope.py  harness-contract.schema.json  model-policy.json  model_policy.py  operation-envelope.schema.json  skill_sync.py  watcher_adapter.py
docs/: agent-pr-review-checklist.md  core-capability.md  existing-repository-adoption.md  maintainer-playbook.md  openai-oss-application.md  release-checklist.md  role-selection-guide.md  security-checklist.md
examples/: ai-project-layout.md  check-output.md  final-keep-archive.md
templates/: AGENTS.md  HANDOFF.md  WORKFLOW.md
templates/FINAL_KEEP/: README.md
tests/: test_cli.py  test_contracts.py  test_documentation_links.py  test_envelope.py  test_model_policy.py  test_p0_cli.py  test_skill_sync.py  test_source_adapters.py
