[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-agent-workflow-kit"
version = "0.1.0"
description = "A dependency-free CLI and template kit for safer Codex agent workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Codex Multi-Agent Workflow Kit contributors" }
]
keywords = ["codex", "multi-agent", "handoff", "workflow", "repo-hygiene"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = []

[project.scripts]
codex-workflow-kit = "codex_multi_agent_workflow_kit.cli:main"

[tool.setuptools.packages.find]
include = ["codex_multi_agent_workflow_kit*"]

[tool.setuptools.package-data]
codex_multi_agent_workflow_kit = ["*.json"]
